fix: max hit shadow overflow

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -2,6 +2,7 @@ $font-size-xs: 10px;
 $font-size-sm: 12px;
 $font-size-base: 14px;
 
+$size-combatant: 5rem;
 $size-encounter: 1.6rem;
 $size-form: 1.6rem;
 
