--- a/src/views/Combatant.scss
+++ b/src/views/Combatant.scss
@@ -3,5 +3,5 @@
   flex-wrap: nowrap;
   justify-content: center;
   align-items: flex-start;
-  margin-bottom: $padding-md;
+  height: $size-combatant;
 }
